# hipai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
hipai/: __init__.py  paths.py  tools.py
notebooks/: 01 - Knowledge Base.ipynb  02 - Memory Usage.ipynb  02 - Memoryt Usage.ipynb  Knowledge Base.ipynb
scripts/: build_memory_db.py
streamlit/: hipai_assistant.py  hipai_chatbot.py  hipai_clone.py
web/: hipai_assistant.py  hipai_clone.py
