[project]
name = "hipai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "aimu[all]",
    "langchain>=0.3.26",
    "protobuf<=3.20",
    "streamlit>=1.46.1",
    "watchdog",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hipai*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.uv.sources]
aimu = { path = "../aimu", editable = true }
