[project]
name = "hipai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "aimu[all]",
    "langchain",
    "protobuf",
    "streamlit",
    "watchdog",
]

[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hipai*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.uv.sources]
aimu = { path = "../aimu", editable = true }
