[project]
name = "hipai"
version = "0.1.0"
description = "Investigation into developign highly personalized AI"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "aimu[all]>=0.3.2",
    "langchain",
    "openai-whisper",
    "protobuf",
    "streamlit",
    "watchdog",
]

[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hipai*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.uv.sources]
aimu = { path = "../aimu", editable = true }
